--- a/ui/package.json
+++ b/ui/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": ".\\node_modules\\.bin\\webpack --config webpack.prod.js",
+    "ci": "./node_modules/.bin/webpack --config webpack.prod.js",
     "start": "npm run build && http-server .\\dist",
     "start:dev": ".\\node_modules\\.bin\\webpack-dev-server --open --config webpack.dev.js --content-base dist/"
   },
